# PDFLoader

./: .gitignore  pyproject.toml
src/: PDFExtractor.py  main.py
src/lib/: json.py
