[tool.poetry]
name = "pdf_loader"
version = "0.1.0"
description = ""
authors = ["unochanel <shanksryouop@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"
poetry = "^1.4.2"
pdfminer-six = "^20221105"
pymupdf = "^1.22.3"
pdfplumber = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
